crates/xifty-cli/tests/snapshots/cli_contract__extract_mixed_png_normalized.snap
---
source: crates/xifty-cli/tests/cli_contract.rs
assertion_line: 237
expression: "extract_json(\"mixed.png\", ViewMode::Normalized)"
---
{
  "input": {
    "container": "png",
    "detected_format": "png",
    "path": "mixed.png"
  },
  "normalized": {
    "fields": [
      {
        "confidence": 0.949999988079071,
        "field": "captured_at",
        "sources": [
          {
            "container": "png",
            "namespace": "exif",
            "offset_end": 191,
            "offset_start": 179,
            "path": "exif_ifd"
          }
        ],
        "value": {
          "kind": "timestamp",
          "value": "2024-04-16T12:34:56"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "created_at",
        "sources": [
          {
            "container": "png",
            "namespace": "exif",
            "offset_end": 203,
            "offset_start": 191,
            "path": "exif_ifd"
          }
        ],
        "value": {
          "kind": "timestamp",
          "value": "2024-04-16T12:34:56"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "modified_at",
        "sources": [
          {
            "container": "png",
            "namespace": "xmp",
            "offset_end": 1054,
            "offset_start": 375,
            "path": "xmp_packet"
          }
        ],
        "value": {
          "kind": "timestamp",
          "value": "2024-04-16T13:00:00"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "device.make",
        "sources": [
          {
            "container": "png",
            "namespace": "exif",
            "offset_end": 87,
            "offset_start": 75,
            "path": "ifd0"
          }
        ],
        "value": {
          "kind": "string",
          "value": "XIFtyCam"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "device.model",
        "notes": [
          "selected Model from exif over 1 competing candidate(s)"
        ],
        "sources": [
          {
            "container": "png",
            "namespace": "exif",
            "offset_end": 99,
            "offset_start": 87,
            "path": "ifd0"
          }
        ],
        "value": {
          "kind": "string",
          "value": "IterationOne"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "software",
        "notes": [
          "selected Software from exif over 1 competing candidate(s)"
        ],
        "sources": [
          {
            "container": "png",
            "namespace": "exif",
            "offset_end": 123,
            "offset_start": 111,
            "path": "ifd0"
          }
        ],
        "value": {
          "kind": "string",
          "value": "XIFtyTestGen"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "author",
        "sources": [
          {
            "container": "png",
            "namespace": "xmp",
            "offset_end": 1054,
            "offset_start": 375,
            "path": "xmp_packet"
          }
        ],
        "value": {
          "kind": "string",
          "value": "K"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "copyright",
        "sources": [
          {
            "container": "png",
            "namespace": "xmp",
            "offset_end": 1054,
            "offset_start": 375,
            "path": "xmp_packet"
          }
        ],
        "value": {
          "kind": "string",
          "value": "XIFty"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "orientation",
        "sources": [
          {
            "container": "png",
            "namespace": "exif",
            "offset_end": 111,
            "offset_start": 99,
            "path": "ifd0"
          }
        ],
        "value": {
          "kind": "integer",
          "value": 1
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "dimensions.width",
        "notes": [
          "selected ImageWidth from exif over 1 competing candidate(s)"
        ],
        "sources": [
          {
            "container": "png",
            "namespace": "exif",
            "offset_end": 63,
            "offset_start": 51,
            "path": "ifd0"
          }
        ],
        "value": {
          "kind": "integer",
          "value": 800
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "dimensions.height",
        "notes": [
          "selected ImageHeight from exif over 1 competing candidate(s)"
        ],
        "sources": [
          {
            "container": "png",
            "namespace": "exif",
            "offset_end": 75,
            "offset_start": 63,
            "path": "ifd0"
          }
        ],
        "value": {
          "kind": "integer",
          "value": 600
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "exposure.iso",
        "sources": [
          {
            "container": "png",
            "namespace": "exif",
            "offset_end": 239,
            "offset_start": 227,
            "path": "exif_ifd"
          }
        ],
        "value": {
          "kind": "integer",
          "value": 200
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "exposure.aperture",
        "sources": [
          {
            "container": "png",
            "namespace": "exif",
            "offset_end": 227,
            "offset_start": 215,
            "path": "exif_ifd"
          }
        ],
        "value": {
          "kind": "rational",
          "value": {
            "denominator": 10,
            "numerator": 56
          }
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "exposure.shutter_speed",
        "sources": [
          {
            "container": "png",
            "namespace": "exif",
            "offset_end": 215,
            "offset_start": 203,
            "path": "exif_ifd"
          }
        ],
        "value": {
          "kind": "rational",
          "value": {
            "denominator": 250,
            "numerator": 1
          }
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "exposure.focal_length_mm",
        "sources": [
          {
            "container": "png",
            "namespace": "exif",
            "offset_end": 251,
            "offset_start": 239,
            "path": "exif_ifd"
          }
        ],
        "value": {
          "kind": "float",
          "value": 50.0
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "lens.model",
        "sources": [
          {
            "container": "png",
            "namespace": "exif",
            "offset_end": 275,
            "offset_start": 263,
            "path": "exif_ifd"
          }
        ],
        "value": {
          "kind": "string",
          "value": "XIFty 50mm F2"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "lens.make",
        "sources": [
          {
            "container": "png",
            "namespace": "exif",
            "offset_end": 263,
            "offset_start": 251,
            "path": "exif_ifd"
          }
        ],
        "value": {
          "kind": "string",
          "value": "XIFty Optics"
        }
      },
      {
        "confidence": 0.8999999761581421,
        "field": "location",
        "sources": [
          {
            "container": "png",
            "namespace": "xmp",
            "offset_end": 1054,
            "offset_start": 375,
            "path": "xmp_packet"
          },
          {
            "container": "png",
            "namespace": "xmp",
            "offset_end": 1054,
            "offset_start": 375,
            "path": "xmp_packet"
          }
        ],
        "value": {
          "kind": "coordinates",
          "value": {
            "latitude": 40.4462,
            "longitude": -79.98
          }
        }
      }
    ]
  },
  "report": {
    "conflicts": [
      {
        "field": "captured_at",
        "message": "xmp:CreateDate=2024-04-16T12:34:56 vs exif:DateTimeOriginal=2024:04:16 12:34:56",
        "sources": [
          {
            "namespace": "xmp",
            "provenance": {
              "container": "png",
              "namespace": "xmp",
              "offset_end": 1054,
              "offset_start": 375,
              "path": "xmp_packet"
            },
            "tag_id": "CreateDate",
            "tag_name": "CreateDate",
            "value": {
              "kind": "string",
              "value": "2024-04-16T12:34:56"
            }
          },
          {
            "namespace": "exif",
            "provenance": {
              "container": "png",
              "namespace": "exif",
              "offset_end": 191,
              "offset_start": 179,
              "path": "exif_ifd"
            },
            "tag_id": "0x9003",
            "tag_name": "DateTimeOriginal",
            "value": {
              "kind": "timestamp",
              "value": "2024:04:16 12:34:56"
            }
          }
        ]
      },
      {
        "field": "device.model",
        "message": "multiple candidates disagreed; selected Model from exif",
        "sources": [
          {
            "namespace": "exif",
            "provenance": {
              "container": "png",
              "namespace": "exif",
              "offset_end": 99,
              "offset_start": 87,
              "path": "ifd0"
            },
            "tag_id": "0x0110",
            "tag_name": "Model",
            "value": {
              "kind": "string",
              "value": "IterationOne"
            }
          },
          {
            "namespace": "xmp",
            "provenance": {
              "container": "png",
              "namespace": "xmp",
              "offset_end": 1054,
              "offset_start": 375,
              "path": "xmp_packet"
            },
            "tag_id": "Model",
            "tag_name": "Model",
            "value": {
              "kind": "string",
              "value": "IterationTwo"
            }
          }
        ]
      },
      {
        "field": "software",
        "message": "multiple candidates disagreed; selected Software from exif",
        "sources": [
          {
            "namespace": "exif",
            "provenance": {
              "container": "png",
              "namespace": "exif",
              "offset_end": 123,
              "offset_start": 111,
              "path": "ifd0"
            },
            "tag_id": "0x0131",
            "tag_name": "Software",
            "value": {
              "kind": "string",
              "value": "XIFtyTestGen"
            }
          },
          {
            "namespace": "xmp",
            "provenance": {
              "container": "png",
              "namespace": "xmp",
              "offset_end": 1054,
              "offset_start": 375,
              "path": "xmp_packet"
            },
            "tag_id": "Software",
            "tag_name": "Software",
            "value": {
              "kind": "string",
              "value": "XIFtyXmpGen"
            }
          }
        ]
      },
      {
        "field": "dimensions.width",
        "message": "multiple candidates disagreed; selected ImageWidth from exif",
        "sources": [
          {
            "namespace": "exif",
            "provenance": {
              "container": "png",
              "namespace": "exif",
              "offset_end": 63,
              "offset_start": 51,
              "path": "ifd0"
            },
            "tag_id": "0x0100",
            "tag_name": "ImageWidth",
            "value": {
              "kind": "integer",
              "value": 800
            }
          },
          {
            "namespace": "xmp",
            "provenance": {
              "container": "png",
              "namespace": "xmp",
              "offset_end": 1054,
              "offset_start": 375,
              "path": "xmp_packet"
            },
            "tag_id": "ImageWidth",
            "tag_name": "ImageWidth",
            "value": {
              "kind": "integer",
              "value": 640
            }
          }
        ]
      },
      {
        "field": "dimensions.height",
        "message": "multiple candidates disagreed; selected ImageHeight from exif",
        "sources": [
          {
            "namespace": "exif",
            "provenance": {
              "container": "png",
              "namespace": "exif",
              "offset_end": 75,
              "offset_start": 63,
              "path": "ifd0"
            },
            "tag_id": "0x0101",
            "tag_name": "ImageHeight",
            "value": {
              "kind": "integer",
              "value": 600
            }
          },
          {
            "namespace": "xmp",
            "provenance": {
              "container": "png",
              "namespace": "xmp",
              "offset_end": 1054,
              "offset_start": 375,
              "path": "xmp_packet"
            },
            "tag_id": "ImageHeight",
            "tag_name": "ImageHeight",
            "value": {
              "kind": "integer",
              "value": 480
            }
          }
        ]
      }
    ],
    "issues": []
  },
  "schema_version": "0.1.0"
}
